--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel static/ts --out-dir static/dist --extensions \".ts,.tsx\" --source-maps inline",
+    "//": "build:js\": \"babel static/ts --out-dir static/dist --extensions \".ts,.tsx\" --source-maps inline",
+    "build:js": "webpack",
     "postinstall": ""
   },
   "author": "Tomotaka Ogino",
@@ -20,7 +21,11 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
     "@babel/preset-env": "^7.4.1",
     "@babel/preset-typescript": "^7.3.2",
-    "typescript": "^3.3.3"
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.3.3",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "@types/jquery": "^3.3.29"
