--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:types": "tsc --emitDeclarationOnly",
     "//": "build:js\": \"babel static/ts --out-dir static/dist --extensions \".ts,.tsx\" --source-maps inline",
     "build:js": "webpack",
-    "start": "webpack-dev-server -d"
+    "start": "webpack-dev-server -d",
+    "watch": "webpack-dev-server -watch"
   },
   "author": "Tomotaka Ogino",
   "license": "ISC",
@@ -21,9 +22,13 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
     "@babel/preset-env": "^7.4.1",
     "@babel/preset-typescript": "^7.3.2",
+    "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
     "jquery": "^3.4.1",
+    "style-loader": "^0.23.1",
     "ts-loader": "^6.0.4",
     "typescript": "^3.3.3",
+    "url-loader": "^2.0.1",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
