--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
     "@babel/preset-env": "^7.4.1",
     "@babel/preset-typescript": "^7.3.2",
+    "bootstrap": "^4.3.1",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
     "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.4",
     "typescript": "^3.3.3",
